[Gaurang] commit: Notes API with User Authentication
