# services/notesServices.js
@@ -1,11 +1,14 @@
 const Notes = require('../model/notesModel');
 var log = require('../logger/logger')
+const auth =require('../utils/auth')
 
 
 class NotesService{
 
     async saveNote(req, res){
+        const u_id = await auth.getUserID(req)
         const newNote = new Notes({
+            user_id: u_id.toString(),
             title : req.body.title,
             description : req.body.desc,
             
@@ -56,7 +59,14 @@ class NotesService{
         }
         
     }
+    async archivedNotes(req, res){
+        const user_ID = await auth.getUserID(req);
+        const USER = user_ID.toString()
+        console.log(USER)
+        const archivedNotes = await Notes.find({"user_id" : USER, "isArchive": "true"})
 
+        res.json(archivedNotes);
+    }
     async deleteNote(req, res, notesGet){
         if(req.body.isDeleted != null){
             res.notesGet.isDeleted = req.body.isDeleted;
@@ -71,6 +81,14 @@ class NotesService{
 
             res.status(400).json({message : err.message});
         }
+    }
+    async deletedNotes(req, res){
+        const user_ID = await auth.getUserID(req);
+        const USER = user_ID.toString()
+        console.log(USER)
+        const archivedNotes = await Notes.find({"user_id" : USER, "isDeleted": "true"})
+
+        res.json(archivedNotes);
     }
 
 }
